; ModuleID = '/home/carl/AnghaBench/git/extr_revision.c_read_pathspec_from_stdin.c'
source_filename = "/home/carl/AnghaBench/git/extr_revision.c_read_pathspec_from_stdin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }
%struct.argv_array = type { i32 }

@stdin = common dso_local global i32 0, align 4
@EOF = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.strbuf*, %struct.argv_array*)* @read_pathspec_from_stdin to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @read_pathspec_from_stdin(%struct.strbuf* %0, %struct.argv_array* %1) #0 {
  %3 = alloca %struct.strbuf*, align 8
  %4 = alloca %struct.argv_array*, align 8
  store %struct.strbuf* %0, %struct.strbuf** %3, align 8
  store %struct.argv_array* %1, %struct.argv_array** %4, align 8
  br label %5

5:                                                ; preds = %11, %2
  %6 = load %struct.strbuf*, %struct.strbuf** %3, align 8
  %7 = load i32, i32* @stdin, align 4
  %8 = call i64 @strbuf_getline(%struct.strbuf* %6, i32 %7)
  %9 = load i64, i64* @EOF, align 8
  %10 = icmp ne i64 %8, %9
  br i1 %10, label %11, label %17

11:                                               ; preds = %5
  %12 = load %struct.argv_array*, %struct.argv_array** %4, align 8
  %13 = load %struct.strbuf*, %struct.strbuf** %3, align 8
  %14 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @argv_array_push(%struct.argv_array* %12, i32 %15)
  br label %5

17:                                               ; preds = %5
  ret void
}

declare dso_local i64 @strbuf_getline(%struct.strbuf*, i32) #1

declare dso_local i32 @argv_array_push(%struct.argv_array*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
